--- a/apps/iaimc-frontend/src/styles/styles.scss
+++ b/apps/iaimc-frontend/src/styles/styles.scss
@@ -3,4 +3,5 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-@import "stylestheme.css"
+@import "stylestheme.css";
+
