feat(IAIMC-3): add a menu toggle functionality

--- a/libs/ui-components/src/navbar/navbar.component.html
+++ b/libs/ui-components/src/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="navbar">
-  <nav>
+  <button class="menu_toggle" (click)="toggleMenu()">☰</button>
+  <nav [class.open]="isMenuOpened()">
     <ul>
       <li>
         <a
