--- a/libs/ui-components/src/navbar/navbar.component.scss
+++ b/libs/ui-components/src/navbar/navbar.component.scss
@@ -9,6 +9,15 @@
         justify-content: center;
     }
 
+    .menu_toggle {
+        display: none;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
     ul {
         list-style: none;
         display: flex;
@@ -52,4 +61,35 @@
         width: 100%;
         left: 0;
     }
+
+    @media (max-width: 768px) {
+        .menu-toggle {
+            display: block;
+        }
+
+        nav {
+            position: absolute;
+            top: 4rem;
+            left: 0;
+            width: 100%;
+            background-color: var(--mat-sys-primary);
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+            padding: 1rem;
+            transition: all 0.3s ease-in-out;
+
+            ul {
+                flex-direction: column;
+                width: 100%;
+                text-align: center;
+            }
+        }
+
+        nav.open {
+            display: flex;
+        }
+    }
+
 }
