feat(IAIMC-4): defining reusable scss variables

--- a/libs/ui-components/src/stage/stage.component.scss
+++ b/libs/ui-components/src/stage/stage.component.scss
@@ -1,8 +1,10 @@
+$description-color:#555 ;
+$title-color: #333;
+
 .stage-container {
   width: 100%;
-  padding: 2rem;
+  padding:4rem 5rem;
   background-color: #f8f9fa;
-  border-bottom: 1px solid #e9ecef;
   margin-bottom: 2rem;
 }
 
@@ -19,8 +21,8 @@
 }
 
 .stage-title {
-  font-size: 2.5rem;
-  color: #333;
+  font-size: 2rem;
+  color: $title-color;
   margin-bottom: 1rem;
   font-weight: 600;
 }
@@ -28,38 +30,60 @@
 .stage-description {
   font-size: 1rem;
   line-height: 1.6;
-  color: #555;
+  color:  $description-color;
 }
 
 .image-container {
   flex: 1;
   display: flex;
   justify-content: center;
+  filter: drop-shadow(0px 10px 15px rgba(0, 0, 0, 0.2));
 }
 
+.image-card {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  padding: 0;
+  overflow: visible;
+}
 .stage-image {
   max-width: 100%;
   height: auto;
   border-radius: 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Responsive styles */
 @media (max-width: 768px) {
-  .stage-content {
-    flex-direction: column;
+  .stage-container {
+    padding: 2rem;
+    .stage-content {
+      flex-direction: column;
+      display: grid;
+      grid-template-areas:
+      "title"
+      "image"
+      "description";
+    }
   }
 
-  .text-container, .image-container {
+  .text-container {
     width: 100%;
+    display: contents;
   }
 
   .stage-title {
     font-size: 2rem;
+    grid-area: title;
+    margin-bottom: 1.5rem;
+  }
+
+  .stage-description {
+    grid-area: description;
+    margin-top: 1.5rem;
   }
 
   .image-container {
-    order: -1; /* Image appears first on mobile */
-    margin-bottom: 1.5rem;
+    grid-area: image;
+    width: 100%;
   }
 }
