--- a/apps/iaimc-frontend/src/styles/styles.scss
+++ b/apps/iaimc-frontend/src/styles/styles.scss
@@ -3,4 +3,4 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-@use "stylestheme.scss"
+@use 'stylestheme.scss';
