--- a/apps/iaimc-frontend/src/styles/styles.scss
+++ b/apps/iaimc-frontend/src/styles/styles.scss
@@ -3,11 +3,11 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-@import "stylestheme.css";
+@import 'stylestheme.css';
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
