feat(IAIMC-6): design the ui for the footer

--- a/libs/ui-components/src/footer/footer.component.html
+++ b/libs/ui-components/src/footer/footer.component.html
@@ -1,1 +1,38 @@
-<p>footer works!</p>
+<mat-toolbar>
+  <footer>
+    <div class="footer-container">
+      <section class="footer-container__contact-us">
+        <h1>Contact us</h1>
+        <div class="contact">
+          <p>accelerator modeling configurator® GmbH</p>
+          <a [href]="'tel:+4922039649145'">+49 2203 9649 145</a>
+          <button mat-button class="custom-button">Write a message</button>
+        </div>
+      </section>
+      <section class="rating-container">
+        <h1>Please rate this configurator</h1>
+
+        <div class="rating-stars">
+          <mat-icon
+            *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
+            [class.filled]="i + 1 <= (hoveredRating || selectedRating)"
+            [class.hovered]="i + 1 <= hoveredRating"
+            (mouseenter)="onMouseEnter(i + 1)"
+            (mouseleave)="onMouseLeave()"
+            (click)="onClick(i + 1)"
+            aria-hidden="false"
+            aria-label="Rate"
+            [title]="i + 1"
+          >
+            star
+          </mat-icon>
+        </div>
+        <mat-form-field class="form-input">
+          <textarea matInput placeholder="What can we improve?"></textarea>
+        </mat-form-field>
+        <button mat-button disabled class="custom-button">Submit rating</button>
+      </section>
+    </div>
+    <span>© 2025 accelerator modeling configurator® GmbH</span>
+  </footer>
+</mat-toolbar>
