--- a/libs/ui-components/src/contact-form/contact-form.component.scss
+++ b/libs/ui-components/src/contact-form/contact-form.component.scss
@@ -84,7 +84,9 @@ textarea {
   display: flex;
   align-items: center;
   gap: 8px;
-  transition: background 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    background 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .select-file-container {
