--- a/libs/ui-components/src/stage/stage.component.html
+++ b/libs/ui-components/src/stage/stage.component.html
@@ -1,11 +1,20 @@
 <section class="stage-container">
   <div class="stage-content">
     <div class="text-container">
-      <h1 class="stage-title">{{ title }}</h1>
-      <p class="stage-description">{{ description }}</p>
+      <h1 class="stage-title">Injection Molding Designer</h1>
+      <p class="stage-description">
+        The individual component is created in just a few steps: upload the CAD
+        model, select a material and let us check the manufacturability - that's
+        it. You will immediately see a provisional price and delivery time.
+        After approval you can request a quote.
+      </p>
     </div>
     <div class="image-container">
-      <img [src]="imageUrl" [alt]="imageAlt" class="stage-image" />
+      <img
+        src="/imd-stage.png"
+        alt="Injection molding mechanical part"
+        class="stage-image"
+      />
     </div>
   </div>
 </section>
