--- a/libs/ui-components/src/navbar/navbar.component.scss
+++ b/libs/ui-components/src/navbar/navbar.component.scss
@@ -53,7 +53,9 @@
     width: 0;
     height: 0.125rem;
     background-color: white;
-    transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+    transition:
+      width 0.3s ease-in-out,
+      left 0.3s ease-in-out;
   }
 
   a.active::after {
