refactor(frontend): modify contact form to incoperate eslint reules

--- a/libs/ui-components/src/contact-form/contact-form.component.html
+++ b/libs/ui-components/src/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isVisible" class="form-container">
+<div class="full-screen-modal">
   <button class="close-btn" mat-icon-button (click)="closeForm()">
     <mat-icon>close</mat-icon>
   </button>
@@ -20,15 +20,11 @@
         <mat-form-field>
           <mat-label>Last name</mat-label>
           <input matInput formControlName="lastName" />
-          <mat-error
-            *ngIf="
-              contactForm.get('lastName')?.hasError('required') &&
-              (contactForm.get('lastName')?.touched ||
-                contactForm.get('lastName')?.dirty)
-            "
-          >
-            Last name is required
-          </mat-error>
+          @if (contactForm.get('lastName')?.hasError('required') &&
+          (contactForm.get('lastName')?.touched ||
+          contactForm.get('lastName')?.dirty)) {
+          <mat-error>Last name is required</mat-error>
+          }
         </mat-form-field>
       </div>
 
@@ -36,34 +32,28 @@
         <mat-form-field>
           <mat-label>E-mail</mat-label>
           <input matInput formControlName="email" />
-          <mat-error
-            *ngIf="
-              contactForm.get('email')?.invalid &&
-              (contactForm.get('email')?.touched ||
-                contactForm.get('email')?.dirty)
-            "
-          >
-            <span *ngIf="contactForm.get('email')?.hasError('required')"
-              >Email is required</span
-            >
-            <span *ngIf="contactForm.get('email')?.hasError('email')"
-              >Invalid email format</span
-            >
+          @if (contactForm.get('email')?.invalid &&
+          (contactForm.get('email')?.touched || contactForm.get('email')?.dirty))
+          {
+          <mat-error>
+            @if (contactForm.get('email')?.hasError('required')) {
+            <span>Email is required</span>
+            }
+            @if (contactForm.get('email')?.hasError('email')) {
+            <span>Invalid email format</span>
+            }
           </mat-error>
+          }
         </mat-form-field>
 
         <mat-form-field>
           <mat-label>Company</mat-label>
           <input matInput formControlName="company" />
-          <mat-error
-            *ngIf="
-              contactForm.get('company')?.hasError('required') &&
-              (contactForm.get('company')?.touched ||
-                contactForm.get('company')?.dirty)
-            "
-          >
-            Company is required
-          </mat-error>
+          @if (contactForm.get('company')?.hasError('required') &&
+          (contactForm.get('company')?.touched ||
+          contactForm.get('company')?.dirty)) {
+          <mat-error>Company is required</mat-error>
+          }
         </mat-form-field>
       </div>
 
@@ -71,29 +61,21 @@
         <mat-form-field class="postal-code">
           <mat-label>Postal code</mat-label>
           <input matInput formControlName="postalCode" />
-          <mat-error
-            *ngIf="
-              contactForm.get('postalCode')?.hasError('required') &&
-              (contactForm.get('postalCode')?.touched ||
-                contactForm.get('postalCode')?.dirty)
-            "
-          >
-            Postal code is required
-          </mat-error>
+          @if (contactForm.get('postalCode')?.hasError('required') &&
+          (contactForm.get('postalCode')?.touched ||
+          contactForm.get('postalCode')?.dirty)) {
+          <mat-error>Postal code is required</mat-error>
+          }
         </mat-form-field>
 
         <mat-form-field class="country">
           <mat-label>Country</mat-label>
           <input matInput formControlName="country" />
-          <mat-error
-            *ngIf="
-              contactForm.get('country')?.hasError('required') &&
-              (contactForm.get('country')?.touched ||
-                contactForm.get('country')?.dirty)
-            "
-          >
-            Country is required
-          </mat-error>
+          @if (contactForm.get('country')?.hasError('required') &&
+          (contactForm.get('country')?.touched ||
+          contactForm.get('country')?.dirty)) {
+          <mat-error>Country is required</mat-error>
+          }
         </mat-form-field>
       </div>
 
@@ -118,7 +100,7 @@
         />
         <button
           class="select-file-btn"
-          mat-raised-button
+          mat-button
           color="primary"
           type="button"
           (click)="fileInput.click()"
@@ -128,7 +110,7 @@
         </button>
       </div>
 
-      <div class="select-file-container">
+      <div class="terms-agreemnet">
         <mat-checkbox
           class="agreement"
           formControlName="agreement"
@@ -140,20 +122,17 @@
         </p>
       </div>
 
-      <mat-error
-        class="accept-error"
-        *ngIf="
-          contactForm.get('agreement')?.invalid &&
-          (contactForm.get('agreement')?.touched ||
-            contactForm.get('agreement')?.dirty)
-        "
-      >
+      @if (contactForm.get('agreement')?.invalid &&
+      (contactForm.get('agreement')?.touched ||
+      contactForm.get('agreement')?.dirty)) {
+      <mat-error class="accept-error">
         You must accept the data protection regulations
       </mat-error>
+      }
 
       <div class="form-btns">
-        <button class="cancel-btn" mat-button type="button">Cancel</button>
-        <button class="submit-btn" mat-button type="submit">Submit</button>
+        <button class="cancel-btn" mat-stroked-button type="button">Cancel</button>
+        <button class="submit-btn" mat-stroked-button type="submit">Submit</button>
       </div>
     </form>
   </div>
