--- a/apps/iaimc-frontend/src/styles/styles.scss
+++ b/apps/iaimc-frontend/src/styles/styles.scss
@@ -2,3 +2,18 @@
 @use 'stylestheme.scss';
 
 @include mat.all-component-densities(-3);
+
+.full-screen-dialog {
+  &,
+  .mdc-dialog__surface {
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    max-width: none;
+    max-height: none;
+    box-shadow: none;
+    overflow-x: hidden;
+  }
+}
