--- a/apps/iaimc-frontend/src/app/app.component.html
+++ b/apps/iaimc-frontend/src/app/app.component.html
@@ -1,1 +1,10 @@
 <h1>{{ title }}</h1>
+<div *ngIf="isLoggedIn">
+  <p>Welcome, user!</p>
+</div>
+
+<ul>
+  <li *ngFor="let item of items">
+    {{ item.name }}
+  </li>
+</ul>
