--- a/libs/ui-components/src/contact-form/contact-form.component.html
+++ b/libs/ui-components/src/contact-form/contact-form.component.html
@@ -20,7 +20,12 @@
         <mat-form-field>
           <mat-label>Last name</mat-label>
           <input matInput formControlName="lastName" />
-          <mat-error *ngIf="contactForm.get('lastName')?.hasError('required') && contactForm.get('lastName')?.touched">
+          <mat-error
+            *ngIf="
+              contactForm.get('lastName')?.hasError('required') &&
+              contactForm.get('lastName')?.touched
+            "
+          >
             Last name is required
           </mat-error>
         </mat-form-field>
@@ -31,15 +36,24 @@
           <mat-label>E-mail</mat-label>
           <input matInput formControlName="email" />
           <mat-error *ngIf="contactForm.get('email')?.touched">
-            <span *ngIf="contactForm.get('email')?.hasError('required')">Email is required</span>
-            <span *ngIf="contactForm.get('email')?.hasError('email')">Invalid email format</span>
+            <span *ngIf="contactForm.get('email')?.hasError('required')"
+              >Email is required</span
+            >
+            <span *ngIf="contactForm.get('email')?.hasError('email')"
+              >Invalid email format</span
+            >
           </mat-error>
         </mat-form-field>
 
         <mat-form-field>
           <mat-label>Company</mat-label>
           <input matInput formControlName="company" />
-          <mat-error *ngIf="contactForm.get('company')?.hasError('required') && contactForm.get('company')?.touched">
+          <mat-error
+            *ngIf="
+              contactForm.get('company')?.hasError('required') &&
+              contactForm.get('company')?.touched
+            "
+          >
             Company is required
           </mat-error>
         </mat-form-field>
@@ -49,7 +63,12 @@
         <mat-form-field class="postal-code">
           <mat-label>Postal code</mat-label>
           <input matInput formControlName="postalCode" />
-          <mat-error *ngIf="contactForm.get('postalCode')?.hasError('required') && contactForm.get('postalCode')?.touched">
+          <mat-error
+            *ngIf="
+              contactForm.get('postalCode')?.hasError('required') &&
+              contactForm.get('postalCode')?.touched
+            "
+          >
             Postal code is required
           </mat-error>
         </mat-form-field>
@@ -57,7 +76,12 @@
         <mat-form-field class="country">
           <mat-label>Country</mat-label>
           <input matInput formControlName="country" />
-          <mat-error *ngIf="contactForm.get('country')?.hasError('required') && contactForm.get('country')?.touched">
+          <mat-error
+            *ngIf="
+              contactForm.get('country')?.hasError('required') &&
+              contactForm.get('country')?.touched
+            "
+          >
             Country is required
           </mat-error>
         </mat-form-field>
@@ -75,13 +99,28 @@
 
       <p class="attach-file-title">File attachment (optional)</p>
       <div class="upload-container">
-        <input #fileInput type="file" hidden (change)="handleFileSelection($event)" />
-        <button class="select-file-btn" mat-button color="primary" type="button" (click)="fileInput.click()">
+        <input
+          #fileInput
+          type="file"
+          hidden
+          (change)="handleFileSelection($event)"
+        />
+        <button
+          class="select-file-btn"
+          mat-button
+          color="primary"
+          type="button"
+          (click)="fileInput.click()"
+        >
           <mat-icon>upload_file</mat-icon>
           Select File
         </button>
-        <p *ngIf="contactForm.get('file')?.value" class="selected-file-name">{{ contactForm.get('file')?.value?.name }}</p>
-        <p *ngIf="fileValidationError" class="error-message">{{ fileValidationError }}</p>
+        <p *ngIf="contactForm.get('file')?.value" class="selected-file-name">
+          {{ contactForm.get('file')?.value?.name }}
+        </p>
+        <p *ngIf="fileValidationError" class="error-message">
+          {{ fileValidationError }}
+        </p>
       </div>
 
       <div class="terms-agreemnet">
@@ -96,16 +135,22 @@
         </p>
       </div>
 
-      @if (contactForm.get('agreement')?.invalid &&
-      (contactForm.get('agreement')?.touched ||
-      contactForm.get('agreement')?.dirty)) {
-      <mat-error class="accept-error">
-        You must accept the data protection regulations
-      </mat-error>
+      @if (
+        contactForm.get('agreement')?.invalid &&
+        (contactForm.get('agreement')?.touched ||
+          contactForm.get('agreement')?.dirty)
+      ) {
+        <mat-error class="accept-error">
+          You must accept the data protection regulations
+        </mat-error>
       }
       <div class="form-btns">
-        <button class="cancel-btn" mat-stroked-button type="button">Cancel</button>
-        <button class="submit-btn" mat-stroked-button type="submit">Submit</button>
+        <button class="cancel-btn" mat-stroked-button type="button">
+          Cancel
+        </button>
+        <button class="submit-btn" mat-stroked-button type="submit">
+          Submit
+        </button>
       </div>
     </form>
   </div>
