feat(frontend): created the ui fro the footer

--- a/libs/ui-components/src/footer/footer.component.html
+++ b/libs/ui-components/src/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <footer>
-    <div class="footer-container">
-      <section class="footer-container__contact-us">
+    <form [formGroup]="ratingForm" class="form-group">
+      <section class="contact-us">
         <h4>Contact us</h4>
         <div class="contact">
           <div class="contact__tel">
@@ -11,31 +11,52 @@
           <button mat-button class="custom-button">Write a message</button>
         </div>
       </section>
-      <section class="rating-container">
-        <h4>Please rate this configurator</h4>
 
-        <div class="rating-stars">
-          <mat-icon
-            *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
-            [class.filled]="i + 1 <= (hoveredRating || selectedRating)"
-            [class.hovered]="i + 1 <= hoveredRating"
-            (mouseenter)="onMouseEnter(i + 1)"
-            (mouseleave)="onMouseLeave()"
-            (click)="onClick(i + 1)"
-            (keydown)="onClick(i + 1)"
-            aria-hidden="false"
-            aria-label="Rate"
-            [title]="i + 1"
-          >
-            star
-          </mat-icon>
+      <section *ngIf="!isSubmitted" class="rating-container">
+        <div class="rating-container__wrapper">
+          <h4>Please rate this configurator</h4>
+          <div class="rating-stars">
+            <mat-icon
+              *ngFor="let star of [1, 2, 3, 4, 5]; let i = index"
+              [class.filled]="i + 1 <= (hoveredRating || selectedRating)"
+              [class.hovered]="i + 1 <= hoveredRating"
+              (mouseenter)="onMouseEnter(i + 1)"
+              (mouseleave)="onMouseLeave()"
+              (click)="onClick(i + 1)"
+              (keydown)="onClick(i + 1)"
+              aria-hidden="false"
+              aria-label="Rate"
+              [title]="i + 1"
+            >
+              star
+            </mat-icon>
+          </div>
+          <mat-form-field class="form-input">
+            <textarea
+              formControlName="feedback"
+              matInput
+              placeholder="What can we improve?"
+            ></textarea>
+          </mat-form-field>
         </div>
-        <mat-form-field class="form-input">
-          <textarea matInput placeholder="What can we improve?"></textarea>
-        </mat-form-field>
-        <button mat-button disabled class="custom-button">Submit rating</button>
+        <div *ngIf="isRattingLoading" class="spinner-container">
+          <mat-spinner [diameter]="20"
+          [strokeWidth]="2"></mat-spinner>
+        </div>
+        <button
+          *ngIf="!isRattingLoading"
+          mat-button
+          [disabled]="!isFormValid()"
+          (click)="onSubmit()"
+          class="custom-button submit-rating-button"
+        >
+          Submit rating
+        </button>
       </section>
-    </div>
+      <div *ngIf="isSubmitted">
+        <app-thank-you-feedback />
+      </div>
+    </form>
     <span
       >&copy; {{ currentYear }} accelerator modeling configurator® GmbH</span
     >
