feat(frontend): implemented toolbar component

--- a/apps/iaimc-frontend/src/styles/stylestheme.scss
+++ b/apps/iaimc-frontend/src/styles/stylestheme.scss
@@ -25,8 +25,8 @@ html {
   --mat-sys-on-secondary-fixed-variant: light-dark(#582c9a, #582c9a);
 
   /* Tertiary palette variables */
-  --mat-sys-tertiary: light-dark(#af0094, #ffade3);
-  --mat-sys-on-tertiary: light-dark(#ffffff, #5f004f);
+  --mat-sys-tertiary: light-dark(#363636, #ffade3);
+  --mat-sys-on-tertiary: light-dark(#b3b3b3, #5f004f);
   --mat-sys-tertiary-container: light-dark(#ffd8ee, #860071);
   --mat-sys-on-tertiary-container: light-dark(#3a0030, #ffd8ee);
   --mat-sys-tertiary-fixed: light-dark(#ffd8ee, #ffd8ee);
