feat(frontend): resolved git conflict

--- a/libs/ui-components/src/footer/footer.component.html
+++ b/libs/ui-components/src/footer/footer.component.html
@@ -40,8 +40,7 @@
           </mat-form-field>
         </div>
         <div *ngIf="isRattingLoading" class="spinner-container">
-          <mat-spinner [diameter]="20"
-          [strokeWidth]="2"></mat-spinner>
+          <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
         </div>
         <button
           *ngIf="!isRattingLoading"
