feat(frontend): implement responsive design for toolbar

--- a/libs/ui-components/src/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/toolbar/toolbar.component.html
@@ -26,5 +26,10 @@
         <mat-icon aria-hidden="false" fontIcon="more_vert"></mat-icon>
       </button>
     </div>
+    <div class="humberger__menu">
+      <button>
+        <mat-icon aria-hidden="false" fontIcon="menu"></mat-icon>
+      </button>
+    </div>
   </div>
 </mat-toolbar>
