--- a/libs/ui-components/src/toolbar/toolbar.component.scss
+++ b/libs/ui-components/src/toolbar/toolbar.component.scss
@@ -66,7 +66,18 @@
     border: none;
     color: white;
   }
+  .humberger__menu{
+    display: none;
+  }
   button:hover {
     background-color: var(--mat-sys-on-tertiary);
+  }
+  @media (max-width: 768px) {
+    .header-toolbar__menu {
+      display: none;
+    }
+    .humberger__menu{
+      display: block;
+    }
   }
 }
