--- a/libs/ui-components/src/thank-you-feedback/thank-you-feedback.component.html
+++ b/libs/ui-components/src/thank-you-feedback/thank-you-feedback.component.html
@@ -1,5 +1,5 @@
 <main class="feedback-container">
-  <ng-container *ngIf="!submitted; else successMessage">
+  @if (!submitted()) {
     <h4>Thank you for your feedback!</h4>
     <p>We would like to learn more about your ideas. May we contact you?</p>
     <form [formGroup]="contactForm">
@@ -23,9 +23,7 @@
       You can withdraw this consent at any time. Read our
       <a routerLink="#">Privacy Policy</a> for more information.
     </p>
-  </ng-container>
-
-  <ng-template #successMessage>
+  } @else {
     <div class="success-container">
       <h2>Thank you for your feedback!</h2>
       <div class="feedback-image">
@@ -36,5 +34,5 @@
         />
       </div>
     </div>
-  </ng-template>
+  }
 </main>
