fix(frontend): review changes

--- a/libs/ui-components/src/footer/footer.component.html
+++ b/libs/ui-components/src/footer/footer.component.html
@@ -43,7 +43,7 @@
               ></textarea>
             </mat-form-field>
           </div>
-          @if (isRattingLoading()) {
+          @if (isRatingLoading()) {
             <div class="spinner-container">
               <mat-spinner [diameter]="20" [strokeWidth]="2"></mat-spinner>
             </div>
