--- a/libs/ui-components/src/thank-you-feedback/thank-you-feedback.component.html
+++ b/libs/ui-components/src/thank-you-feedback/thank-you-feedback.component.html
@@ -10,9 +10,9 @@
           placeholder="E-mail"
           formControlName="email"
         />
-        <mat-error *ngIf="contactForm.get('email')?.hasError('email')">
-          Please enter a valid email address
-        </mat-error>
+        @if (contactForm.get('email')?.hasError('email')) {
+          <mat-error> Please enter a valid email address </mat-error>
+        }
       </mat-form-field>
       <button mat-button [disabled]="!contactForm.valid" class="custom-button">
         Submit
